@@ -1,3 +1,7 @@
+2010-06-01  Andreas Kupries  <andreask@activestate.com>
+
+	* pkgIndex.tcl: Updated with the actual package versions.
+
 2010-06-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* dateentry.tcl: v0.92
